AC_INIT(src/corona.h)
AC_CONFIG_AUX_DIR(config)

MAJOR_VERSION=0
MINOR_VERSION=2
PATCH_VERSION=0
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION
PACKAGE="corona"

AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(PATCH_VERSION)
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for options.

AC_ARG_ENABLE(debug,
    AC_HELP_STRING(--enable-debug, build debug),
    CXXFLAGS="$CXXFLAGS -g"
    AC_DEFINE(DEBUG))

dnl Checks for programs.

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL

dnl Checks for libraries.

AC_CHECK_LIB(png, png_create_read_struct,,
    AC_MSG_ERROR(could not find libpng),
    -lz -lm)
AC_CHECK_LIB(jpeg, jpeg_start_decompress,,
    AC_MSG_ERROR(could not find libjpeg))

dnl Checks for header files.

AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl If building with gcc, build with all warnings except "class has virtual
dnl functions but non-virtual destructor".
if [[ "x$GXX" = "xyes" ]]; then
   CXXFLAGS="$CXXFLAGS -Wall -Wno-non-virtual-dtor"
fi
if [[ "x$GCC" = "xyes" ]]; then
   CFLAGS="$CFLAGS -Wall -Wno-non-virtual-dtor"
fi

dnl Output makefiles.

AC_OUTPUT(
        Makefile
        doc/Makefile
        src/Makefile
        src/libungif-4.1.0/Makefile
)
